--- a/src/styles/__theme_custom.scss
+++ b/src/styles/__theme_custom.scss
@@ -233,8 +233,8 @@ input[type='time']::-webkit-calendar-picker-indicator {
   }
 }
 
-.NavbarMobile--hide {
-  @apply translate-y-full;
+.nc-Header--hide {
+  @apply -translate-y-full;
 }
 
 @keyframes myblur {
