--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@supports (-webkit-overflow-scrolling: touch) {
-  input {
-    font-size: 16px;
-  }
+input:active {
+  font-size: 16px;
 }
