--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overscroll-behavior-y: none;
+}
+
 input:active {
   font-size: 16px;
+  transition-delay: 1s;
 }
