--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@ body {
   overscroll-behavior-y: none;
 }
 
-input:active {
+/* set font size 16px to avoid screen scale issue on mobile device */
+input {
   font-size: 16px;
 }
