--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,14 @@ body {
 input {
   font-size: 16px !important;
 }
+
+.bg-img-placeholder {
+  background-image: url('../images/image-placeholder-light.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.dark .bg-img-placeholder {
+  background-image: url('../images/image-placeholder-dark.png');
+}
