--- a/src/styles/__theme_custom.scss
+++ b/src/styles/__theme_custom.scss
@@ -51,15 +51,24 @@
 }
 
 .markdown-styles {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 600;
+  }
+
   h1 {
     font-size: 30px;
     line-height: 1.33em;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
 
     @media screen and (min-width: 1024px) {
       font-size: 35px;
       line-height: 1.3em;
-      margin-bottom: 35px;
+      margin-bottom: 32px;
     }
   }
 
