--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,22 @@
 @import './_theme_custom';
 //
 @import './header';
+
+// Card Swiper Slider Styles
+.card-slider {
+  &-pagination {
+    bottom: 2px !important;
+
+    .swiper-pagination-bullet {
+      background: white;
+      height: 0.375rem;
+      margin: 0 3px !important;
+      opacity: 0.6;
+      width: 0.375rem;
+
+      &-active {
+        opacity: 1;
+      }
+    }
+  }
+}
