change design home page

--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -37,6 +37,9 @@
   --c-neutral-700: 55, 65, 81;
   --c-neutral-800: 31, 41, 55;
   --c-neutral-900: 17, 24, 39;
+  --c-neutral-950: 28, 37, 62;
+  --c-neutral-1000: 5, 11, 26;
+  --c-neutral-1050: 16, 24, 39;
 }
 
 // THEME PALETTE 1 ==========================================
