--- a/src/styles/__theme_custom.scss
+++ b/src/styles/__theme_custom.scss
@@ -42,8 +42,16 @@
 .rc-slider-track {
   @apply bg-primary-400;
 }
+
 .rc-slider-handle {
   @apply border-primary-300;
+}
+
+.rs-swiper-slide{
+  height: calc((100% - 30px) / 2) !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nc-Header--hide {
