create blog page

--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -25,6 +25,7 @@
   --c-secondary-700: 15, 118, 110;
   --c-secondary-800: 17, 94, 89;
   --c-secondary-900: 19, 78, 74;
+  --c-secondary-950: 223, 225, 114;
 
   // NEUTRAL COLOR
   --c-neutral-50: 249, 250, 251;
