--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -45,6 +45,7 @@
   --c-neutral-1050: 16, 24, 39;
   --c-neutral-1100: 55, 79, 81;
   --c-neutral-1150: 28, 49, 53;
+  --c-neutral-1200: 114, 144, 157;
 
 }
 
