--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -46,6 +46,10 @@
   --c-neutral-1100: 55, 79, 81;
   --c-neutral-1150: 28, 49, 53;
   --c-neutral-1200: 114, 144, 157;
+  --c-neutral-1250: 44, 47, 51;
+  --c-neutral-1300: 58, 61, 66;
+  --c-neutral-1350: 224, 224, 224;
+  --c-neutral-1400: 204, 204, 204;
 
 }
 
