fixed bugs with documents and priceBar

--- a/src/styles/__theme_colors.scss
+++ b/src/styles/__theme_colors.scss
@@ -10,6 +10,7 @@
   --c-primary-400: 92, 155, 216;
   --c-primary-500: 99, 102, 241;
   --c-primary-600: 0, 102, 132;
+  --c-primary-650: 0, 85, 110;
   --c-primary-700: 67, 56, 202;
   --c-primary-800: 55, 48, 163;
   --c-primary-900: 49, 46, 129;
@@ -28,6 +29,7 @@
   --c-secondary-800: 17, 94, 89;
   --c-secondary-900: 19, 78, 74;
   --c-secondary-950: 223, 225, 114;
+  --c-secondary-1000: 200, 200, 100;
 
   // NEUTRAL COLOR
   --c-neutral-50: 249, 250, 251;
